# pacman_curs

./: .gitignore  .pacman-settings  CMakeLists.txt  build_and_run.sh  canonical  cppcheck.sh
src/: CMakeLists.txt  about.c  about.h  cppcheck.sh  direction.h  directions.c  directions.h  engine.c  game.c  game.h  gamemodel.c  gamemodel.h  gamesizing.h  gameui.c  gameui.h  main.c  main.cpp  main.h  menu.c  menu.h  render.c  render.h
src/directions/: directions.c  directions.h
src/engine/: engine.c  engine.h  queue.c  queue.h
src/game/: gamegraph.c  gamegraph.h  gamemodel.c  gamemodel.h
src/pages/: about.c  about.cpp  about.h  about.hpp  game.c  game.cpp  game.h  game.hpp  menu.c  menu.cpp  menu.h  menu.hpp  page.h  page.hpp  result.c  result.cpp  result.h  result.hpp  score.c  score.cpp  score.h  score.hpp  settings.c  settings.cpp  settings.h  settings.hpp
src/score/: score.c  score.h
src/settings/: settings.c  settings.h
src/ui/: gamesizing.c  gamesizing.h  gameui.c  gameui.h  render.c  render.h  windowsize.c  windowsize.h
